# volume-master

./: .oxlintrc.json  index.html  package-lock.json  package.json
.github/workflows/: build-windows.yml
src/: main.ts  styles.css  volume-service.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  volume_controller.rs
